Thunderbird calendar : pas de scroll de souris pour changer de mois.

--- a/INSTALL_Debian-stable_12-bookworm.org
+++ b/INSTALL_Debian-stable_12-bookworm.org
@@ -568,7 +568,10 @@ Le dossier de profile se trouve dans =~/.thunderbird/XXX.default-default=.
 #+begin_quote
 : mail.quota.mainwindow_threshold.show: 0
 #+end_quote
-
+- Dans le calendrier, empêcher le scroll de souris de changer de mois :
+#+begin_quote
+: calendar.view.mousescroll: false
+#+end_quote
   
 **** [[https://github.com/rafaelmardojai/thunderbird-gnome-theme][Thème GNOME]]
 
